--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~52.0.23",
-    "expo-status-bar": "~2.0.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "expo": "~52.0.25",
+    "expo-status-bar": "~2.0.1",
+    "expo-updates": "^0.26.12",
+    "i18next": "^24.2.1",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-i18next": "^15.4.0",
+    "react-native": "0.76.6",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-permissions": "^5.2.2",
+    "react-native-sms": "^1.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^15.1.3"
   },
   "private": true
 }
